# eyedb

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
doc/: Makefile.am  eyedbdoc.css  index.html
doc/doxygen/: Makefile.am  eyedb-doxygen.cfg.in
doc/images/: Makefile.am
doc/javadoc/: Makefile.am
doc/manpages/: Makefile.am  eyedb-config.xml  eyedb-options.xml  eyedb.xml  eyedbadmin-dataspace.xml  eyedbcollimpladmin.xml  eyedbconsadmin.xml  eyedbctl.xml  eyedbd.xml  eyedbgetenv.xml  eyedbidxadmin.xml  eyedbjrun.xml  eyedbloca.xml  eyedbodl.xml  eyedboql.xml  eyedbpasswd.xml  eyedbprotadmin.xml  eyedbsmd.xml
doc/manual/: Admin.tex  CplusplusBinding.tex  GettingStarted.tex  JavaBinding.tex  Makefile.am  ODL.tex  OQL.tex  latex2html-init.in  title.tex  version.tex.in
doc/manual/administration/: Makefile.am  administration.xml  database.xml  database_advanced.xml  database_tuning.xml  introduction.xml  server.xml  user.xml
doc/manual/administration.old/: Administration.tex  Makefile.am
doc/manual/cpp-programming/: Makefile.am
doc/manual/docbook-common/: Makefile.am  Makefile.include  emacs-macro  params.xsl
doc/manual/figures/: arch.fig  objmod.fig  objmod2.eps
doc/manual/getting-started/: Makefile.am  getting-started.xml
doc/manual/getting-started.old/: Makefile.am
doc/manual/installation/: Makefile.am  compiling.xml  installation.xml  installing.xml
doc/manual/java-programming/: Makefile.am
doc/manual/latex-common/: Makefile.am  latex2html-init.in  start.tex  title.tex
doc/manual/odl/: Makefile.am  ODL.tex
doc/manual/oql/: Makefile.am
doc/manual/overview/: Makefile.am  Overview.tex
doc/manual/overview/figures/: Makefile.am  arch.eps  objmod.eps  objmod2.fig
doc/release-notes/: EyeDBReleaseNotes.html  Makefile.am
examples/: Makefile.am  Makefile.eyedb-examples.in  Makefile.eyedb.in  README
examples/C++Binding/: Makefile.am  Makefile.eyedb-examples.in
examples/C++Binding/generic/: Makefile.am  Makefile.eyedb-examples.in
examples/C++Binding/generic/basic/: Makefile.am  Makefile.eyedb-examples.in  basic.cc
examples/C++Binding/generic/query/: Makefile.am  Makefile.eyedb-examples.in  query.cc
examples/C++Binding/generic/schema/: Makefile.am  Makefile.eyedb-examples.in  object_dump.cc  schema_dump.cc
examples/C++Binding/generic/store/: Makefile.am  Makefile.eyedb-examples.in  store.cc
examples/C++Binding/schema-oriented/: Makefile.am  Makefile.eyedb-examples.in
examples/C++Binding/schema-oriented/admin/: Makefile.am  Makefile.eyedb-examples.in  admin.cc
examples/C++Binding/schema-oriented/methods/: Makefile.am  Makefile.eyedb-examples.in  methods.cc  personmthbe.cc  personmthfe.cc
examples/C++Binding/schema-oriented/query/: Makefile.am  Makefile.eyedb-examples.in  query.cc
examples/C++Binding/schema-oriented/share/: Makefile.am  Makefile.eyedb-examples.in  init.sh.in  schema.odl
examples/C++Binding/schema-oriented/store/: Makefile.am  Makefile.eyedb-examples.in  store.cc
examples/GettingStarted/: Makefile.am  Makefile.eyedb-examples.in  PersonTest.java  init.sh.in  persontest.cc  schema.odl
examples/JavaBinding/: Makefile.am
examples/JavaBinding/generic/: Makefile.am  Makefile.eyedb-examples.in
examples/JavaBinding/generic/applet/: Makefile.am  Makefile.eyedb-examples.in  Test.java  applet.html
examples/JavaBinding/generic/appli/: Makefile.am  Makefile.eyedb-examples.in
examples/JavaBinding/schema-oriented/: Makefile.am  Makefile.eyedb-examples.in
examples/oql/: Makefile.am  person.oql
include/eyedb/: AbstractIterator.h  Agregat.h  AgregatClass.h  Architecture.h  Argument.h  Attribute.h  Basic.h  BasicClass.h  Byte.h  ByteClass.h  Char.h  CharClass.h  Class.h  ClassIterator.h  ClientConfig.h  CollArray.h  CollArrayClass.h  CollBag.h  CollBagClass.h  CollImpl.h  CollList.h  CollListClass.h  CollSet.h  CollSetClass.h  Collection.h  CollectionClass.h  CollectionIterator.h  Config.h  Connection.h  DBM.h  Database.h  Datafile.h  Dataspace.h  Enum.h  EnumClass.h  Error.h  Exception.h  Float.h  FloatClass.h  GenHashTable.h  (+38 more)
include/eyedb/internals/: ClassPeer.h  Makefile.am  ObjectHeader.h  ObjectPeer.h  kern_const.h
install/etc/: Access.sample  Makefile.am  eyedb.conf.sample.in  eyedbd.conf.sample.in
pkg-config/: Makefile.am  eyedb.pc.in
scripts/: Makefile.am  eyedb-lex  eyedb-postinstall.sh.in  eyedb.init  eyedb.rc.in  eyedbjrun.in
src/eyedb/: AbstractIterator.cc  Agregat.cc  AgregatClass.cc  Architecture.cc  Argument.cc  Argument_code.cc  Argument_code.h  AttrNative.cc  AttrNative.h  Attribute.cc  Attribute_idx.cc  Attribute_inv.cc  Attribute_p.h  BEQueue.cc  BEQueue.h  Basic.cc  BufferString.cc  BufferString.h  CalendarConverter.h  Class.cc  ClassConversion.cc  ClassIterator.cc  ClassPeer.cc  ClockConverter.cc  ClockConverter.h  CollArray.cc  CollBag.cc  CollCache.h  CollList.cc  CollSet.cc  Collection.cc  CollectionBE.cc  CollectionBE.h  CollectionClass.cc  CollectionIterator.cc  CollectionPeer.cc  CollectionPeer.h  Config.cc  Connection.cc  ConnectionPeer.cc  (+155 more)
src/eyedb/admin/: ATRTopic.cc  ATRTopic.h  CLSTopic.cc  CLSTopic.h  CNSTopic.cc  CNSTopic.h  COLTopic.cc  COLTopic.h  Command.h  Const.h  DBSTopic.cc  DBSTopic.h  DSPTopic.cc  DSPTopic.h  DTFTopic.cc  DTFTopic.h  DatabaseExportImport.cc  DatabaseExportImport.h  DatafileStats.cc  DatafileStats.h  IDXTopic.cc  IDXTopic.h  Makefile.am  OBJTopic.cc  OBJTopic.h  TODO  Topic.cc  Topic.h  USRTopic.cc  USRTopic.h  eyedbadmin.cc
src/eyedb/admin/old/: Makefile.am  (+6 more)
src/eyedb/commands/: Makefile.am
src/java/: Makefile.am
src/java/src/: Makefile.am
src/www/html/: Makefile.am  browser.html  cbrowser.html
tests/bugs/oql-triggers/: Makefile.am  README  schema.odl  test_init_schema.sh.in  test_oql_load_after_trigger_message.sh.in  test_oql_load_before_trigger_crash.sh.in  test_oql_update_trigger_crash.sh.in  test_oql_update_trigger_same_values.sh.in
tests/examples/GettingStarted/: Makefile.am  test_cpp.py  test_init.py  test_java.py
tests/init/: Makefile.am  test_init_dbm.sh.in
tests/lib/shell/: Makefile.am  eyedb-functions.sh.in
(+447 files in other folders)
