SUBDIRS=internals

pkginclude_HEADERS= \
AbstractIterator.h \
AgregatClass.h \
Agregat.h \
Architecture.h \
Argument.h \
Attribute.h \
base.h \
BasicClass.h \
Basic.h \
ByteClass.h \
Byte.h \
CharClass.h \
Char.h \
Class.h \
ClassIterator.h \
CollArrayClass.h \
CollArray.h \
CollBagClass.h \
CollBag.h \
CollectionClass.h \
Collection.h \
CollectionIterator.h \
CollImpl.h \
CollListClass.h \
CollList.h \
CollSetClass.h \
CollSet.h \
Config.h \
ClientConfig.h \
ServerConfig.h \
Connection.h \
Database.h \
Datafile.h \
Dataspace.h \
DBM.h \
EnumClass.h \
Enum.h \
Error.h \
Exception.h \
eyedb.h \
FloatClass.h \
Float.h \
gbxcyctx.h \
gbx.h \
GenHashTable.h \
IndexImpl.h \
init.h \
Instance.h \
Int16Class.h \
Int16.h \
Int32Class.h \
Int32.h \
Int64Class.h \
Int64.h \
linklist.h \
Log.h \
ObjCache.h \
Object.h \
ObjectLocation.h \
OidClass.h \
Oid.h \
OidP.h \
opts.h \
OQL.h \
OQLIterator.h \
RecMode.h \
Schema.h \
StructClass.h \
Struct.h \
syscls.h \
Transaction.h \
TransactionParams.h \
UnionClass.h \
Union.h \
utils.h \
Value.h 

nodist_pkginclude_HEADERS= \
version.h 

